--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 header {
-    background-color: #6c5ce7;
+    background-color: black;
     color: white;
     padding: 40px 20px;
     text-align: center;
